--- a/website/index.html
+++ b/website/index.html
@@ -10,6 +10,8 @@
     <title>JMTelectronicsOfficial | Display</title>
 </head>
 <body>
+
+    <button onclick="getToTop()" id="toTopButton"><i class="fa-solid fa-angle-up"></i></button>
    
     <header>
         <ul class = "navigation-links">
@@ -43,6 +45,26 @@
                     Aperiam deleniti ad facilis?
                 </div>
             </div>
+            <div class="article">
+                <h2>Topic</h2>
+                <div class="description">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                    Eligendi, ut commodi ratione aliquid veniam delectus a optio esse aut 
+                    fugiat quidem, magni rem impedit repellat quo eos in ipsam, 
+                    nostrum nemo voluptate quisquam harum repellendus tempora! 
+                    Aperiam deleniti ad facilis?
+                </div>
+            </div>
+            <div class="article">
+                <h2>Topic</h2>
+                <div class="description">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                    Eligendi, ut commodi ratione aliquid veniam delectus a optio esse aut 
+                    fugiat quidem, magni rem impedit repellat quo eos in ipsam, 
+                    nostrum nemo voluptate quisquam harum repellendus tempora! 
+                    Aperiam deleniti ad facilis?
+                </div>
+            </div>
         </div>
         
         <div id="about-us">
@@ -60,9 +82,11 @@
         <div id="contact">
             <h1>Contact</h1>
             <form action="" method="post">
-                <input type="email" name="email" placeholder="Enter your e-mail">
+                <div>
+                    <input type="email" name="email" placeholder="E-mail">
+                    <input type="submit" value="Submit">
+                </div >
                 <textarea name="description" cols="30" rows="10" placeholder="Type here..."></textarea>
-                <input type="submit" value="Submit">
             </form>
         </div>
     </div>
@@ -71,7 +95,7 @@
         <div class="content">
             <h2>TMJelectronics</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, unde?
+                You can get in touch with us using:
             </p>
             <ul class="social">
                 <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
