--- a/website/index.html
+++ b/website/index.html
@@ -10,23 +10,27 @@
     <title>JMTelectronicsOfficial | Display</title>
 </head>
 <body>
-
     <button onclick="getToTop()" id="toTopButton"><i class="fa-solid fa-angle-up"></i></button>
-   
     <header>
         <img class="logo" src="photos/logo.png" alt="logo.png">
+        
         <ul class = "navigation-links">
             <li><a href="#about-us">About us</a></li>
             <li><a href="#">Phones</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li>
+                <div class="mode-switch">
+                    <input type="checkbox" id="mode-toggle">
+                    <label for="mode-toggle" onclick="toggleModeSwitch()"></label>
+                </div>
+            </li>
         </ul> 
-        
     </header>
 
     <div id="content-main">
         <div id="home">
             <div class="article">
-                <h2>Topic</h2>
+                <h1>Topic</h1>
                 <div class="description">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                     Eligendi, ut commodi ratione aliquid veniam delectus a optio esse aut 
@@ -36,7 +40,7 @@
                 </div>
             </div>
             <div class="article">
-                <h2>Topic</h2>
+                <h1>Topic</h1>
                 <div class="description">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                     Eligendi, ut commodi ratione aliquid veniam delectus a optio esse aut 
@@ -46,7 +50,7 @@
                 </div>
             </div>
             <div class="article">
-                <h2>Topic</h2>
+                <h1>Topic</h1>
                 <div class="description">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                     Eligendi, ut commodi ratione aliquid veniam delectus a optio esse aut 
@@ -56,7 +60,7 @@
                 </div>
             </div>
             <div class="article">
-                <h2>Topic</h2>
+                <h1>Topic</h1>
                 <div class="description">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                     Eligendi, ut commodi ratione aliquid veniam delectus a optio esse aut 
@@ -85,7 +89,7 @@
                 <div>
                     <input type="email" name="email" placeholder="E-mail">
                     <input type="submit" value="Submit">
-                </div >
+                </div>
                 <textarea name="description" cols="30" rows="10" placeholder="Type here..."></textarea>
             </form>
         </div>
@@ -93,7 +97,7 @@
 
     <footer>
         <div class="content">
-            <h2>TMJelectronics</h2>
+            <h2>JMTelectronics</h2>
             <p>
                 You can get in touch with us using:
             </p>
@@ -104,7 +108,7 @@
                 <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
             </ul>
             <div class="copyright">
-                Copyright &copy; 2023 TMJelectronics. Designed by Emdablju.
+                Copyright &copy; 2023 JMTelectronics. Designed by Emdablju.
             </div>
         </div>
     </footer>
