--- a/website/index.html
+++ b/website/index.html
@@ -16,12 +16,26 @@
         
         <ul class = "navigation-links">
             <li><a href="#about-us">About us</a></li>
-            <li><a href="#">Phones</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li class="drop-down">
+                <a href="#">Phones</a>
+                <div class="drop-content">
+                    <a href="#">iPhone 14 Pro Max</a>
+                    <a href="#">iPhone 14 Pro</a>
+                    <a href="#">iPhone 14</a>
+                    <a href="#">iPhone 13 Pro Max</a>
+                    <a href="#">iPhone 13</a>
+                    <a href="#">iPhone 12 Pro Max</a>
+                    <a href="#">iPhone 12 </a>
+                    <a href="#">iPhone 11 Pro Max</a>
+                    <a href="#">iPhone 11 Pro</a>
+                    <a href="#">iPhone 11</a>
+                </div>
+            </li>
             <li>
                 <div class="mode-switch">
-                    <input type="checkbox" id="mode-toggle">
-                    <label for="mode-toggle" onclick="toggleModeSwitch()"></label>
+                    <input type="checkbox" id="mode-toggle" onclick="toggleModeSwitch()">
+                    <label for="mode-toggle"></label>
                 </div>
             </li>
         </ul> 
