--- a/website/index.html
+++ b/website/index.html
@@ -99,10 +99,10 @@
 
         <div id="contact">
             <h1>Contact</h1>
-            <form action="" method="post">
+            <form method="post" enctype="text/plain">
                 <div>
                     <input type="email" name="email" placeholder="E-mail">
-                    <input type="submit" value="Submit">
+                    <input type="submit" value="Submit" name="submit">
                 </div>
                 <textarea name="description" cols="30" rows="10" placeholder="Type here..."></textarea>
             </form>
